force-app/main/default/objects/Sector_Resource__mdt/Sector_Resource__mdt.object-meta.xml
<CustomObject>
    <label>Sector Resource</label>
    <pluralLabel>Sector Resources</pluralLabel>
</CustomObject>