force-app/main/default/objects/Sector_Resource__mdt/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <label>Icon</label>
    <length>150</length>
    <type>Text</type>
</CustomField>