force-app/main/default/objects/Sector_Resource__mdt/fields/link__c.field-meta.xml
<CustomField>
    <fullName>link__c</fullName>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>